console.log en je kan op klikken

--- a/memory.html
+++ b/memory.html
@@ -8,6 +8,7 @@
 <body>
     <div> id="buttons"</div>
     <div> id="images"</div>
+    <img id="myImage" src="staart.jpg" onclick="myFunction()">
     <script src="memory.js"></script>
 </body>
 </html>
